--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -59,7 +59,7 @@
                 exportTypes: ['json', 'csv', 'excel'],
                 //文件名称设置
                 exportOptions: {
-                    fileName: "列表"
+                    fileName: "{$template.tname}"
                 },
 
                 columns:{$fields|raw}
