--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -16,7 +16,7 @@
 <body>
     <div class="login-container">
         <div class="loginbox bg-white">
-            <form>
+            <form autocomplete="off">
                 <div class="loginbox-title">登录</div>
 
                 <div class="loginbox-or">
