--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -13,13 +13,17 @@
                     </div>
                 </div>
                 <div class="widget-body">
-                    <div>
-                        <a href="{:url('admin/Import/createTemplateFirst')}">
-                        <button class="btn btn-primary btn-lg">已有模板，直接导入</button>
-                        </a>
-                    </div>
-                    <div>
-                        
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <a href="{:url('admin/Import/createTemplateFirst')}">
+                                <button class="btn btn-primary btn-lg">已有模板，直接导入</button>
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="{:url('admin/Hand/index')}">
+                                <button class="btn btn-primary btn-lg">手动创建</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
