--- a/application/index/view/template/index.html
+++ b/application/index/view/template/index.html
@@ -73,7 +73,7 @@
                         <div class="form-group">
                             <label for="{$option.title}" class="col-sm-2 control-label">{$option.title}</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control" id="{$option.sid}" name="{$option.sid}">
+                                <input type="text" class="form-control required {$option.rule}" id="{$option.sid}" name="{$option.sid}">
                             </div>
                         </div>
                         {/if} {/volist}
