--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -20,23 +20,11 @@
                 <span class="menu-text">添加任务</span>
                 <i class="menu-expand"></i>
             </a>
-            <ul class="submenu">
-                <li>
-                    <a href="adminlist">
-                        <span class="menu-text">管理员列表</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="adminadd">
-                        <span class="menu-text">管理员添加</span>
-                    </a>
-                </li>
-            </ul>
         </li>
         <li>
-            <a href="system">
+            <a href="{:url('admin/Manage/auth')}">
                 <i class="menu-icon glyphicon glyphicon-cog"></i>
-                <span class="menu-text">系统设置</span>
+                <span class="menu-text">权限设置</span>
             </a>
         </li>
     </ul>
