--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -34,9 +34,9 @@
                 <div class="loginbox-submit">
                     <input id="login" type="button" class="btn btn-primary btn-block" value="登录" />
                 </div>
-                <!-- <div class="loginbox-signup">
+                <div class="loginbox-signup">
                     <a href="{:url('admin/Index/register')}">注册账户</a>
-                </div> -->
+                </div>
             </form>
         </div>
         <div class="logobox">
