--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>管理后台</title>
+    <title>快表系统登录</title>
     <link rel="shortcut icon" href="__IMG__/logo.jpg" type="image/x-icon" />
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet" />
     <link href="__CSS__/font-awesome.min.css" rel="stylesheet" />
@@ -39,11 +39,11 @@
                 </div>
             </form>
         </div>
-        <div class="logobox">
+        <!-- <div class="logobox">
             <p class="text-center" style="font-size: 18px;font-weight: bold;text-shadow: 3px 3px 3px #FF0000;font-style: italic;">
                 admin
             </p>
-        </div>
+        </div> -->
     </div>
 
 
