--- a/application/admin/view/index/register.html
+++ b/application/admin/view/index/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>后台注册</title>
+    <title>快表系统注册</title>
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet" />
     <link href="__CSS__/font-awesome.min.css" rel="stylesheet" />
     <link href="__CSS__/weather-icons.min.css" rel="stylesheet" />
@@ -43,9 +43,9 @@
             </form>
         </div>
         <div class="logobox">
-            <p class="text-center" style="font-size: 18px;font-weight: bold;text-shadow: 3px 3px 3px #FF0000;font-style: italic;">
+            <!-- <p class="text-center" style="font-size: 18px;font-weight: bold;text-shadow: 3px 3px 3px #FF0000;font-style: italic;">
                 admin
-            </p>
+            </p> -->
         </div>
     </div>
 
