--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -4,8 +4,8 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="well bordered-left bordered-themeprimary">
-            <h1 style="font-weight: 900!important;font-style: italic;text-shadow: 5px 5px 5px #ff0000;font-family: '新宋体'">
-                欢迎使用后台管理系统！
+            <h1 style="font-weight: 900!important;font-style: italic;font-family: '新宋体'">
+                欢迎使用快表表单管理系统！
             </h1>
         </div>
     </div>
