--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -40,6 +40,10 @@
                         <td>联系邮箱</td>
                         <td>lijianwzx@163.com</td>
                     </tr>
+                    <tr>
+                        <td>上次登录时间</td>
+                        <td>{$Think.session.admin.last_time|date="Y年m月d日"}</td>
+                    </tr>
                 </tbody>
             </table>
             <div class="footer"></div>
