--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -1,4 +1,3 @@
-<!--head-->
 <!DOCTYPE html>
 <html lang="zh">
 
@@ -30,6 +29,11 @@
                     </a>
                 </div>
                 <!-- /Navbar Barnd -->
+                 <!-- Sidebar Collapse -->
+                 <div class="sidebar-collapse" id="sidebar-collapse">
+                    <i class="collapse-icon fa fa-bars"></i>
+                </div>
+                <!-- /Sidebar Collapse -->
                 <!-- Account Area and Settings --->
                 <div class="navbar-header pull-right">
                     <div class="navbar-account">
@@ -70,8 +74,6 @@
         </div>
     </div>
     <!-- /Navbar -->
-<!--head-->
-
 <!-- Main Container -->
 <div class="main-container container-fluid">
     <!-- Page Container -->
