--- a/application/admin/view/public/_footer.html
+++ b/application/admin/view/public/_footer.html
@@ -1,9 +1,11 @@
 <!--Basic Scripts-->
+<script src="__JS__/skins.js"></script>
 <script src="__JS__/jquery.min.js"></script>
 <script src="__JS__/bootstrap.min.js"></script>
 <!--Beyond Scripts-->
-<script src="__JS__/beyond.min.js"></script>
+<script src="__JS__/beyond.js"></script>
 <script src="__LIB__/layer/layer.js"></script>
+
 <script>
     $(function () {
         $("#loginout").click(function () {
