--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -11,10 +11,10 @@
                 <ul class="tablist">
                     <li id='first-step-li' role="tab" class="first current" aria-disabled="false" aria-selected="true">
                         <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current
-                                step: </span><span class="number">1</span> 编写方式</a>
+                                step: </span><span class="number">1</span> 导入文件</a>
                     </li>
                     <li id='second-step-li' role="tab" class="disabled" aria-disabled="true">
-                        <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="number">2</span>内容添加</a>
+                        <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="number">2</span>完善模板</a>
                     </li>
                     <li id='third-step-li' role="tab" class="disabled last" aria-disabled="true">
                         <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
