--- a/application/admin/view/import/create_template_third.html
+++ b/application/admin/view/import/create_template_third.html
@@ -11,11 +11,11 @@
             <div class="col-lg-9">
                 <ul class="tablist">
                     <li role="tab" class="disabled first" aria-disabled="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 编写方式</a>
+                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 导入文件</a>
                     </li>
                     <li role="tab" class="disabled second" aria-disabled="true">
                         <a id="formWizard-t-1" aria-controls="formWizard-p-1">
-                            <span class="number">2</span> 内容添加
+                            <span class="number">2</span> 完善模板
                         </a>
                     </li>
                     <li role="tab" class="current last" aria-disabled="false" aria-selected="true">
