--- a/application/admin/view/import/create_template_second.html
+++ b/application/admin/view/import/create_template_second.html
@@ -103,11 +103,11 @@
             <div class="col-lg-9">
                 <ul class="tablist">
                     <li role="tab" class="disabled first" aria-disabled="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 编写方式</a>
+                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 导入文件</a>
                     </li>
                     <li role="tab" class="second current" aria-disabled="false" aria-selected="true">
                         <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="current-info audible">current
-                                step: </span><span class="number">2</span> 编写方式</a>
+                                step: </span><span class="number">2</span> 完善模板</a>
                     </li>
                     <li role="tab" class="disabled last" aria-disabled="true">
                         <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
