--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -28,7 +28,7 @@
                                 <form autocomplete="off" id="subForm">
                                     <table class="table" id="tableD">
                                         <caption>
-                                            <h4>模板名<input type="text" required="true" name="templateName" class="form-control"></h4>
+                                            <h4>模板名<input type="text" required="true" name="templateName" ></h4>
                                         </caption>
                                         <tbody>
                                         </tbody>
