--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -49,6 +49,7 @@
         $("#tempalteFile").click();
         $("#tempalteFile").change(function () {
             CheckFile(this)
+            $("#fileBrowserInput").val($("#tempalteFile").val())
         });
     })
     //文件上传验证.
