--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -4,7 +4,12 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="widget radius-bordered">
-            
+
+            <div class="form-horizontal">
+                <input type="text" class="form-control" style="width: 60%;" value="{$shareUrl}" readonly
+                    id="textAreas" />
+                <a href="javascript:;" id="copy">复制</a>
+            </div>
             <div>
                 <table id="table" name="table" class="table table-striped table-hover table-bordered"></table>
             </div>
@@ -21,19 +26,26 @@
 <script src="__LIB__/bootstrap-table/extensions/export/bootstrap-table-export.min.js"></script>
 <script src="__LIB__/bootstrap-table/extensions/tableExport.js"></script>
 <script>
-    $(function() {
+    $(function () {
         //1.初始化Table
         var oTable = new TableInit();
         oTable.Init();
         // 2. 初始化Button的点击事件
         var oButtonInit = new ButtonInit();
         oButtonInit.Init();
+
+        $("#copy").click(function () {
+            var e = document.getElementById("textAreas");
+            e.select(); // 选择对象 
+            document.execCommand("Copy"); // 执行浏览器复制命令 
+            showMsg("复制成功")
+        })
     });
 
-    var TableInit = function() {
+    var TableInit = function () {
         var oTableInit = new Object();
         //初始化Table
-        oTableInit.Init = function() {
+        oTableInit.Init = function () {
             $("#table").bootstrapTable('destroy'); //避免重复执行，需要销毁
             $("#table").bootstrapTable({
                 url: "{:url('admin/Templates/dataList')}",
@@ -62,28 +74,29 @@
                     fileName: "{$template.tname}"
                 },
 
-                columns:{$fields|raw}
+                columns: { $fields| raw
+            }
             });
-        };
-
-        //得到查询的参数
-        oTableInit.queryParams = function(params) {
-            var temp = {
-                //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-                limit: params.limit, //页面大小
-                offset: params.offset
-            };
-            return temp;
-
-        };
-
-        return oTableInit;
     };
 
-    var ButtonInit = function() {
+    //得到查询的参数
+    oTableInit.queryParams = function (params) {
+        var temp = {
+            //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+            limit: params.limit, //页面大小
+            offset: params.offset
+        };
+        return temp;
+
+    };
+
+    return oTableInit;
+    };
+
+    var ButtonInit = function () {
         var oInit = new Object();
         var postdata = {};
-        oInit.Init = function() {
+        oInit.Init = function () {
             //初始化页面上面的按钮事件
         };
 
