--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12">
         <div class="widget radius-bordered">
 
-            <div class="form-horizontal">
+            <div>
                 <input type="text" class="form-control" style="width: 60%;" value="{$shareUrl}" readonly
                     id="textAreas" />
                 <a href="javascript:;" id="copy">复制</a>
@@ -26,6 +26,12 @@
 <script src="__LIB__/bootstrap-table/extensions/export/bootstrap-table-export.min.js"></script>
 <script src="__LIB__/bootstrap-table/extensions/tableExport.js"></script>
 <script>
+    $("#copy").click(function () {
+            var e = document.getElementById("textAreas");
+            e.select(); // 选择对象 
+            document.execCommand("Copy"); // 执行浏览器复制命令 
+            showMsg("复制成功")
+        })
     $(function () {
         //1.初始化Table
         var oTable = new TableInit();
@@ -34,12 +40,7 @@
         var oButtonInit = new ButtonInit();
         oButtonInit.Init();
 
-        $("#copy").click(function () {
-            var e = document.getElementById("textAreas");
-            e.select(); // 选择对象 
-            document.execCommand("Copy"); // 执行浏览器复制命令 
-            showMsg("复制成功")
-        })
+        
     });
 
     var TableInit = function () {
