--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="widget radius-bordered">
-
+            
             <div>
                 <table id="table" name="table" class="table table-striped table-hover table-bordered"></table>
             </div>
@@ -21,27 +21,19 @@
 <script src="__LIB__/bootstrap-table/extensions/export/bootstrap-table-export.min.js"></script>
 <script src="__LIB__/bootstrap-table/extensions/tableExport.js"></script>
 <script>
-    $("#copy").click(function () {
-            var e = document.getElementById("textAreas");
-            e.select(); // 选择对象 
-            document.execCommand("Copy"); // 执行浏览器复制命令 
-            showMsg("复制成功")
-        })
-    $(function () {
+    $(function() {
         //1.初始化Table
         var oTable = new TableInit();
         oTable.Init();
         // 2. 初始化Button的点击事件
         var oButtonInit = new ButtonInit();
         oButtonInit.Init();
-
-        
     });
 
-    var TableInit = function () {
+    var TableInit = function() {
         var oTableInit = new Object();
         //初始化Table
-        oTableInit.Init = function () {
+        oTableInit.Init = function() {
             $("#table").bootstrapTable('destroy'); //避免重复执行，需要销毁
             $("#table").bootstrapTable({
                 url: "{:url('admin/Templates/dataList')}",
@@ -70,29 +62,28 @@
                     fileName: "{$template.tname}"
                 },
 
-                columns: { $fields| raw
-            }
+                columns:{$fields|raw}
             });
-    };
-
-    //得到查询的参数
-    oTableInit.queryParams = function (params) {
-        var temp = {
-            //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-            limit: params.limit, //页面大小
-            offset: params.offset
         };
-        return temp;
 
+        //得到查询的参数
+        oTableInit.queryParams = function(params) {
+            var temp = {
+                //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                limit: params.limit, //页面大小
+                offset: params.offset
+            };
+            return temp;
+
+        };
+
+        return oTableInit;
     };
 
-    return oTableInit;
-    };
-
-    var ButtonInit = function () {
+    var ButtonInit = function() {
         var oInit = new Object();
         var postdata = {};
-        oInit.Init = function () {
+        oInit.Init = function() {
             //初始化页面上面的按钮事件
         };
 
