--- a/application/index/view/template/index.html
+++ b/application/index/view/template/index.html
@@ -62,7 +62,7 @@
 
 
 <body>
-    <div class="container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
         <div class="row col-xs-offset-1">
             <div class="col-xs-11 project-block-background">
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
