--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -7,6 +7,7 @@
 
             <div>
                 <table id="table"
+                data-search="true"
                 class="table table-striped table-hover table-bordered"></table>
             </div>
 
@@ -27,11 +28,12 @@
         $("#table").bootstrapTable({
             url: "{:url('admin/Templates/dataList')}",
             method: "post", //请求方式（*）
-            toolbar: "#toolbar", //工具按钮用哪个容器
+            toolbar: "toolbar", //工具按钮用哪个容器
             striped: false, //是否显示行间隔色
             cache: false, //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
             pagination: true, //是否显示分页（*）
-            sortable: true,
+            sortable: true,                     //是否启用排序
+            sortOrder: "asc",                   //排序方式
             queryParams: queryParams, //传递参数（*）
             sidePagination: "server", //分页方式：client客户端分页，server服务端分页（*）
             pageNumber: 1, //初始化加载第一页，默认第一页
@@ -61,10 +63,13 @@
         return {
             //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
             limit: params.limit, //页面大小
-            offset: params.offset
+            offset: params.offset,
+            order:params.order,
+            ordername: params.sort,
+            search:params.search
         };
     };
-    function formatter1(value, row, index) { return index + 1; }
+    
     });
 </script>
 
