--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -28,12 +28,10 @@
         $("#table").bootstrapTable({
             url: "{:url('admin/Templates/dataList')}",
             method: "post", //请求方式（*）
-            toolbar: "toolbar", //工具按钮用哪个容器
+            toolbar: "#toolbar", //工具按钮用哪个容器
             striped: false, //是否显示行间隔色
             cache: false, //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
             pagination: true, //是否显示分页（*）
-            sortable: true,                     //是否启用排序
-            sortOrder: "asc",                   //排序方式
             queryParams: queryParams, //传递参数（*）
             sidePagination: "server", //分页方式：client客户端分页，server服务端分页（*）
             pageNumber: 1, //初始化加载第一页，默认第一页
@@ -45,6 +43,7 @@
             clickToSelect: true, //是否启用点击选中行
             height: 750, //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "ID", //每一行的唯一标识，一般为主键列
+            
             detailView: false, //是否显示父子表
             //显示导出插件
             showExport: true,
